src/objects/Stripe_Settings_Object__mdt.object
<CustomObject>
    <fields>
        <fullName>CommunityDomain__c</fullName>
        <label>CommunityDomain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicKey__c</fullName>
        <label>PublicKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecretKey__c</fullName>
        <label>SecretKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stripe Settings Object</label>
    <pluralLabel>Stripe Settings Objects</pluralLabel>
</CustomObject>